[tool.poetry]
name = "ls-cleaner"
version = "0.1.0"
description = ""
authors = ["Sultan Zakariya <sultan@epoch8.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
python-dotenv = "^1.0.0"
label-studio-sdk = "^0.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
